[package]
name = "iot_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
